2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22363
        Add a test for DOM1 and DOM2 versions of add() on a select control.

        * fast/dom/dom-add-optionelement-expected.txt: Added.
        * fast/dom/dom-add-optionelement.html: Added.

2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22359
        Add test for document.write() with multiple parameters.

        * fast/dom/document_write_params-expected.txt: Added.
        * fast/dom/document_write_params.html: Added.

2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22387
        Add a test for HTMLOptionsCollection indexed getter and setter.

        * fast/dom/HTMLOptionElement/collection-setter-getter-expected.txt: Added.
        * fast/dom/HTMLOptionElement/collection-setter-getter.html: Added.

2008-11-20  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Beth Dakin.
        
        <rdar://problem/2610675> Blank line that is quoted can't be deleted
        
        The old selection modification code for caret case deletions set the selection
        about to be deleted on the frame, instead of just setting the endingSelection.

        * platform/mac/editing/deleting/delete-by-word-001-expected.txt:
        * platform/mac/editing/deleting/delete-by-word-002-expected.txt:
        * platform/mac/editing/deleting/delete-to-end-of-paragraph-expected.txt:
        * platform/mac/editing/pasteboard/emacs-ctrl-a-k-y-expected.txt:
        * platform/mac/editing/pasteboard/emacs-ctrl-k-y-001-expected.txt:


2008-11-20  Darin Adler  <darin@apple.com>

        - update test result for <rdar://problem/4108572> REGRESSION: Can't extend
          selection with shift-arrow in read only mode
