@@ -1,8 +1,13 @@
-This test checks corner cases of 'f.arguments'.
+This test checks basic and corner cases of 'f.arguments'.
 
 On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
 
 
+PASS basicTest('one')[0] is 'one'
+PASS basicTest('one')[2] is undefined.
+PASS basicTest('one', 'two', 'three')[1] is 'two'
+PASS lengthTest() is '0'
+PASS lengthTest('From', '%E5%8C%97%E4%BA%AC', 360, '/', 'webkit.org') is '5'
 PASS assignTest() is true
 FAIL assignVarUndefinedTest() should be undefined. Was [object Arguments]
 FAIL assignVarUndefinedTest2() should be undefined. Was [object Arguments]
